[level 0] Title: 배열 만들기 6, Time: 32.72 ms, Memory: 119 MB -BaekjoonHub